--- a/public/assets/css/color1.css
+++ b/public/assets/css/color1.css
@@ -424,7 +424,7 @@ a.text-primary:focus {
 
 .login-img {
     position: relative;
-    background-image: url(../images/bg.jpg);
+    background-image: url(../images/main.jpeg);
 }
 
 .login-img::before {
